# mesh-struct

./: .gitignore  CMakeLists.txt
include/playtec/: base.h  border.h  normal.h  ply_utils.hpp  reader.h  surface.h  volume.h
src/: CMakeLists.txt
src/playtec/: base.cpp  border.cpp  normal.cpp  reader.cpp  surface.cpp  volume.cpp
